# nixtla-scaffold

./: .gitignore  LICENSE  README.md  agent_overview_and_instructions.md  pyproject.toml
.github/agents/: finn-forecast-analyst.agent.md
.github/workflows/: release.yml
docs/: scenario_test_battery.md
examples/air_tourism_demo/: README.md  air_tourism_walkthrough.ipynb  forecast_air_tourism_demo.py
examples/byo_excel_model/: create_example_inputs.py
examples/contoso_dax_pipeline/: pipeline.yaml
examples/contoso_dax_pipeline/queries/: contoso_product_dimension.dax  contoso_sales_fact.dax
examples/contoso_dax_pipeline/scripts/: build_forecast_input.py  run_dax_extract.py
examples/contoso_kql_pipeline/: pipeline.yaml
examples/contoso_kql_pipeline/queries/: contoso_product_dimension.kql  contoso_revenue_by_month.kql
examples/contoso_kql_pipeline/scripts/: build_forecast_input.py  run_kql_extract.py
examples/custom_finance_model/: finance_seasonality_model.py  forecast_custom.py  input.csv
examples/datasetsforecast_tourism_small/: forecast_tourism_small.py
examples/feature_tour/: forecast_feature_tour.ipynb
examples/hierarchy_generic/: input.csv
examples/hierarchy_reconciliation/: forecast_hierarchy.py
examples/monthly_finance_csv/: input.csv
examples/python_api_templates/: dataframe_forecast.py
examples/quickstart_csv/: forecast_quick.py  input.csv
examples/serious_finance_forecast/: forecast_finance.py  input.csv
knowledge/: forecasting_principles_and_practice.json  nixtla_dictionary.seed.json  research_to_modeling_map.json
skills/nixtla-forecast/: SKILL.md  skill_manifest.json
src/nixtla_scaffold/: __init__.py  accuracy.py  best_practices.py  byo_model.py  challengers.py  citations.py  cli.py  comparisons.py  connectors.py  custom_models.py  data.py  diagnostics.py  drivers.py  ensemble.py  experiments.py  explain.py  external.py  external_scoring.py  finn_bridge.py  forecast.py  headline.py  hierarchy.py  interpretation.py  knowledge.py  knowledge_base.json  ledger.py  mcp_contracts.py  model_families.py  models.py  ops.py  outputs.py  pipelines.py  presets.py  profile.py  refresh.py  release_gates.py  reports.py  research.py  scenario_lab.py  schema.py  (+4 more)
tests/: test_accuracy.py  test_air_tourism_demo.py  test_byo_model.py  test_challengers.py  test_comparisons.py  test_connectors.py  test_custom_models.py  test_datasetsforecast_example.py  test_drivers.py  test_examples.py  test_experiments.py  test_external.py  test_external_scoring.py  test_finn_bridge.py  test_forecast.py  test_hierarchy.py  test_knowledge.py  test_ledger.py  test_ops.py  test_pipelines.py  test_presets.py  test_profile.py  test_real_scenarios.py  test_release_gates.py  test_scenario_lab.py  test_setup.py  test_signals.py  test_smooth_models.py  test_time_scenarios.py  test_transformations.py  test_workbench_qa.py
